--- a/MVC-Forum/Views/Friends/List.cshtml
+++ b/MVC-Forum/Views/Friends/List.cshtml
@@ -5,7 +5,28 @@
 }
 
 <h1>Friends</h1>
+<a asp-action="Export">Export</a>
 
+<form asp-action="Import" method="post"  
+      enctype="multipart/form-data">  
+          
+    <input type="file" name="file" />  
+    <button type="submit">Upload File</button>  
+</form> 
+
+
+<form method="post" asp-controller="Friends" asp-action="Add">
+    <table border="0" cellpadding="2" cellspacing="2">
+        <tr>
+            <td>Username</td>
+            <td><input type="text" name="name"></td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td><input type="submit" value="Add"></td>
+        </tr>
+    </table>
+</form>
 
 <table class="table">
     <thead>
@@ -20,7 +41,9 @@
     </tr>
     </thead>
     <tbody>
-    @foreach (var item in Model) {
+   
+    @foreach (var item in Model)
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
@@ -33,5 +56,6 @@
             </td>
         </tr>
     }
+
     </tbody>
 </table>
